@@ -1,7 +1,11 @@
-# uet_restaurent
-Sản phẩm của nhóm học sinh trường Đại Học Công Nghệ - Đại học Quốc Gia Hà Nôi
 # Sử dụng Java và JavaFx
 Hướng dẫn sử dụng:
 - Thêm thư viện JavaFx, SQL
-- Sửa VMOption
+  + File -> Project Structure
+  + Libraries -> + -> Java
+  + Thêm lib .java của JavaFX và SQL
+- Sửa VMOption (
+  + Run -> Edit confinguarations
+  + Modify Option -> VMOption
+  + --module-path path_to_javaFX_lib --add-modules=javafx.controls,javafx.fxml)
 - Sửa đường dẫn đến file CSS thành của bạn
